# convexAdam

./: .gitignore  README.md  convex_adam_MIND.py  convex_adam_nnUNet.py  convex_adam_utils.py  l2r_2020_convexAdam_CuRIOUS.py  l2r_2021_convexAdam_task1_docker.py  l2r_2021_convexAdam_task2_docker.py  l2r_2021_convexAdam_task3_docker.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
self_configuring/: adam_run_paired_mind_shiftSpline.py  adam_run_withconfig_shiftSpline.py  convexAdam_hyper_util.py  convex_adam_MIND.py  convex_adam_MIND_testset.py  convex_adam_nnUNet.py  convex_adam_nnUNet_testset.py  convex_run_paired_mind.py  convex_run_withconfig.py  infer_convexadam.py  l2r3.py  main_for_l2r3_MIND.py  main_for_l2r3_MIND_testset.py  main_for_l2r3_nnUNet.py  main_for_l2r3_nnUNet_testset.py
src/convexAdam/: apply_convex.py  convex_adam_MIND.py  convex_adam_nnUNet.py  convex_adam_translation.py  convex_adam_utils.py
tests/: Development-README.md  helper_functions.py  test_convex_adam_mind.py  test_convex_adam_mind_aniso.py  test_convex_adam_mind_translation.py
tests/input/10000/: 10000_1000000_adc.mha  10000_1000000_hbv.mha
